--- a/src/app/pages/home/home.css
+++ b/src/app/pages/home/home.css
@@ -1,36 +1,26 @@
-
-.marketing-section {
-  min-height: 100vh; 
-  padding: 50px 20px;
-  color: #000;
+.backcontainer {
+  position: relative;
 }
 
-.imgF{
-    background-image: url("../../../assets/back1.jpg");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    height: 100vh;
-    width: 100vw;
-    position: absolute;
-    opacity: 0.4;
-}
 
-.z-i{
-    z-index: 2;
+.backcontainer::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("../../../assets/back1.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  opacity: 0.4; 
+  z-index: 1;     
 }
 
 .marketing-section {
     background-color: #ab787c;
 }
 
-.btn-pink {
-  background-color: #f78fa7;
-  color: #000;
-  border: 2px solid #000;
-}
-.btn-pink:hover {
-  background-color: #ffb6c1;
-  color: #000;
-}
+
 
