--- a/src/app/pages/top-page/top-page.html
+++ b/src/app/pages/top-page/top-page.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="marketing-section d-flex flex-column flex-lg-row justify-content-center align-items-center text-center text-lg-start">
+  <div class="marketing-section d-flex flex-column flex-lg-row justify-content-center align-items-center text-center text-lg-start pb-0">
 
     <!-- Texto -->
     <div class="col-12 col-lg-6 z-i px-3">
