--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -1,5 +1,5 @@
  <!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark px-5">
     <div class="container-fluid">
     <!-- Logo -->
     <a class="navbar-brand" href="#">{{title}} {{titledes}}</a>
