--- a/src/app/pages/from-canva/from-canva.html
+++ b/src/app/pages/from-canva/from-canva.html
@@ -1,8 +1,12 @@
 <div class="row">
-  <div class="col-12 p-3 p-md-5" style="z-index: 2;">
-    <div class="ratio ratio-16x9">
-      <iframe [src]="canva" allowfullscreen></iframe>
+  <div *ngFor="let img of images" class="col-12 p-3 p-md-5 d-flex justify-content-center" style="z-index: 2;">
+    <div class="ratio ratio-16x9 w-100">
+      <a *ngIf="img.link != ''" [href]="img.link" target="_blank" >
+        <img [src]="img.img" alt="imagen" class="img-fluid mx-auto d-block rounded shadow">
+      </a>
+      <img *ngIf="img.link == ''" [src]="img.img" alt="imagen" class="img-fluid mx-auto d-block rounded shadow">
     </div>
   </div>
 </div>
+
 
