--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
+html, body {
+  width: 100%;   /* usa % en vez de vw */
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden; /* previene scroll horizontal */
+}
