--- a/src/app/pages/home/home.css
+++ b/src/app/pages/home/home.css
@@ -1,25 +1,7 @@
-.backcontainer {
-  position: relative;
-}
-
-
-.backcontainer::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-image: url("../../../assets/back1.jpg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  opacity: 0.4; 
-  z-index: 1;     
-}
-
-.marketing-section {
-    background-color: #ab787c;
+.des {
+    font-size: clamp(1rem, 1.375vw + 1rem, 1.375rem);
+    max-width: 800px;
+    margin: 0 auto;
 }
 
 
