--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -4,12 +4,12 @@
     <!-- Logo -->
     <div class="value-circle position-relative d-flex align-items-center justify-content-center me-2">
       <img
-        [src]="gifUrl"
+        [src]="IconUrl"
         alt="SoulSync Logo Animado"
         class="value-video"
       >
     </div>
-    <a class="navbar-brand text-truncate d-inline-block" href="#">
+    <a class="navbar-brand text-truncate d-inline-block" href="SoulSync">
       {{title}}
     </a>
 
