--- a/src/app/pages/home/top-page/top-page.html
+++ b/src/app/pages/home/top-page/top-page.html
@@ -1,4 +1,4 @@
-<div class="row justify-content-center py-5 firt-Row">
+<div class="row justify-content-center pt-5 firt-Row">
   <div class="col-12 col-lg-8 py-4 py-lg-5 my-4 my-lg-5 px-4">
 
     <div class="row text-center mt-5">
@@ -17,13 +17,14 @@
   </div>
 </div>
 
-<div class="row justify-content-center py-5 secund-Row">
+<div class="row justify-content-center secund-Row">
   <div class="col-12 col-md-10 py-5 my-5 text-center text-lg-start px-4">
     <div class="row mt-4">
       <div class="col-12 col-lg-6">
-        <h2 class="Mochalatte">Nuestra Esencia</h2>
-        <span>Somos tus aliados para conectar corazón a corazón con tu audiencia, generar experiencias memorables y transformar la forma en que las personas ven, sienten y viven tu marca. 🧠❤️
-          Con creatividad, estrategia y un enfoque en el neuromarketing, diseñamos campañas, talleres y capacitaciones que inspiran, educan y generan resultados reales. Porque tu marca merece ser recordada, no solo vista.
+        <h1 class="Mochalatte">Nuestra Esencia</h1>
+        <span>Somos tus aliados para conectar corazón a corazón ❤️🤝 con tu audiencia, crear experiencias memorables ✨ y transformar la manera en que las personas ven, sienten y viven tu marca.
+            A través de creatividad 🎨, estrategia inteligente 📊 y un enfoque profundo en neuromarketing 🧠, diseñamos campañas, talleres y capacitaciones que inspiran 🌟, educan 📚 y generan resultados reales ✅.
+            Porque tu marca merece ser recordada, no solo vista. 👀✨
         </span>
       </div>
       <div class="col-12 my-3 mt-5">
@@ -33,11 +34,29 @@
   </div>
 </div>
 
-<div class="row justify-content-center pt-5 tres-Row">
- <div class="col-8 py-5 my-5">
-    <div class="row mt-4">
-
+<div class="row justify-content-center tres-Row">
+ <div class="col-12 my-5 text-center text-lg-start px-0">
+  <div class="row mt-5">
+    <div class="col-12 my-5 text-white text-center">
+      <h1 class="Mochalatte">Clientes</h1>
+      <span>Conexiones que inspiran ✨🤝</span>
     </div>
+    <app-top-carousel></app-top-carousel>
+  </div>
+  </div>
+</div>
+
+<div class="row justify-content-center cuatro-Row">
+ <div class="col-12 col-md-10 my-5 text-center text-lg-start px-4">
+  <div class="row mb-5 text-center">
+    <div class="col-12 my-5 text-white">
+      <h1 class="Mochalatte">EXPLORA NUESTRAS RUTAS DE CONEXIÓN </h1>
+      <span>Brindamos capacitaciones 📚 donde descubrirás el poder de conectar 🤝 con tu audiencia desde la emoción ❤️, aprendiendo técnicas que podés aplicar por vos mismo ✋ para transformar experiencias ✨ en resultados reales ✅.</span>
+    </div>
+  </div>
+  <div class="row mt-5 g-4">
+    <app-top-page-cards></app-top-page-cards>
+  </div>
   </div>
 </div>
 
