--- a/src/styles.css
+++ b/src/styles.css
@@ -78,3 +78,23 @@ body {
   background-color: rgb(216, 15, 183);
   color:  white;
 }
+
+.c-citrine{
+  color: #e2ca06;
+}
+
+.c-purple{
+  color: rgb(216, 15, 183);
+}
+
+.c-orange{
+  color: #ec5504;
+}
+
+.c-laceCap{
+  color: rgb(235, 235, 237);
+}
+
+.c-gentian-blue{
+  color: #3f1f9c;
+}
