--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -31,7 +31,7 @@
 
       <ul class="navbar-nav ms-auto text-center">
         <li class="nav-item">
-          <a class="nav-link" href="#">Sobre nosotros</a>
+          <a class="nav-link" href="/about">Sobre nosotros</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -40,7 +40,7 @@
           </a>
           <ul class="dropdown-menu">
             <li *ngFor="let service of servicios">
-              <a class="dropdown-item" href="#">{{service.Name}}</a>
+              <a class="dropdown-item" (click)="goTo(service)" >{{service.title}}</a>
             </li>
           </ul>
         </li>
@@ -51,7 +51,7 @@
           </a>
           <ul class="dropdown-menu">
             <li *ngFor="let proyecto of proyectos">
-              <a class="dropdown-item" href="#">{{proyecto.Name}}</a>
+              <a class="dropdown-item" href="#">{{proyecto.title}}</a>
             </li>
           </ul>
         </li>
