--- a/src/app/pages/home/top-page/top-carousel/top-carousel.html
+++ b/src/app/pages/home/top-page/top-carousel/top-carousel.html
@@ -1,15 +1,15 @@
 <div class="slider">
   <div class="slide-track" (mouseenter)="pause()" (mouseleave)="play()">
 
-    <div class="slide" *ngFor="let item of logos">
-      <img [src]="item.src" [alt]="item.alt" (click)="goTo(item.url)" />
-      <h6>{{item.alt}}</h6>
+    <div class="slide" *ngFor="let item of proyectos">
+      <img [src]="item.iconUrl.replace('&dl=0','&raw=1')" [alt]="item.title" (click)="goTo(item)" />
+      <h6>{{item.title}}</h6>
     </div>
 
     <!-- Se duplica para crear bucle infinito -->
-    <div class="slide" *ngFor="let item of logos">
-      <img [src]="item.src" [alt]="item.alt" (click)="goTo(item.url)" />
-      <h6>{{item.alt}}</h6>
+    <div class="slide" *ngFor="let item of proyectos">
+      <img [src]="item.iconUrl.replace('&dl=0','&raw=1')" [alt]="item.title" (click)="goTo(item)" />
+      <h6>{{item.title}}</h6>
     </div>
   </div>
 </div>
