--- a/src/app/pages/home/top-page/top-page-cards/top-page-cards.css
+++ b/src/app/pages/home/top-page/top-page-cards/top-page-cards.css
@@ -9,7 +9,8 @@
 
 .sol-card:hover {
   transform: translateY(-5px);
-  box-shadow: 0 0 20px rgba(226, 202, 6, 0.5)
+  box-shadow: 0 0 20px rgba(226, 202, 6, 0.5);
+  cursor: pointer;
 }
 
 h2, h4 {
