--- a/src/app/pages/home/top-page/top-page-cards/top-page-cards.html
+++ b/src/app/pages/home/top-page/top-page-cards/top-page-cards.html
@@ -1,18 +1,21 @@
 <div class="row g-4">
-  <div class="col-12 col-md-6" *ngFor="let item of soluciones">
-    <div class="sol-card p-4 h-100">
+  <div class="col-12 col-md-6" *ngFor="let item of servicios">
+    <div (click)="goTo(item)" class="sol-card p-4 h-100">
       <div class="row">
-        <div class="col-10 col-md-10">
-          <h4 class="c-citrine Mochalatte">{{ item.titulo }}</h4>
-          <span class="text-light mt-2">
-            {{ item.descripcion }}
-          </span>
+        <div class="col-9">
+          <h4 class="c-citrine Mochalatte">{{ item.title }}</h4>
         </div>
-        <div class="col-2 align-content-center">
+        <div class="col-2">
           <div class="text-end">
-            <i [class]="item.icono"></i>
+            <i [class]="'bi '+ item.icono + ' c-citrine fz-p'"></i>
           </div>
         </div>
+        <div class="col-12 col-md-10">
+          <span class="text-light mt-2">
+            {{ item["card-descripcion"] }}
+          </span>
+        </div>
+
       </div>
     </div>
   </div>
