--- a/src/app/pages/about/about.html
+++ b/src/app/pages/about/about.html
@@ -1,19 +1,15 @@
 <div class="row justify-content-center py-5 align-items-center firt-Row">
   <div class="col-12 px-4 col-lg-5">
     <div class="row text-center mt-5">
-      <h1 class="display-6">CONSTRUIMOS MARCAS QUE CONECTAN DESDE EL CORAZÓN 🧠❤️</h1>
+      <h1 class="display-6" [innerHTML]="titulo"></h1>
     </div>
     <div class="row text-center mt-3 mb-4">
-      <span class="des">En SoulSync, creemos que el éxito de una marca nace de la conexión humana.
-        Combinamos estrategia, creatividad y neuromarketing para crear experiencias que inspiran confianza, fortalecen relaciones y transforman la forma en que las personas perciben tu marca.
-        Acompañamos a emprendedores y marcas consolidadas a través de campañas, talleres y capacitaciones que combinan estrategia, creatividad y emoción para inspirar, educar y lograr resultados tangibles.
-
-        Tu historia merece ser sentida, no solo vista. ✨
+      <span class="des" [innerHTML]="description">
       </span>
     </div>
   </div>
   <div class="col-12 col-lg-5 p-4 p-lg-1">
-    <img src="https://www.dropbox.com/scl/fi/hs6ednnvrbmsgpvae73vb/about.png?rlkey=p4hb5c54mdn31g1u27q5esovv&st=qusa3087&raw=1" class="img-fluid" alt="Imagen representativa de la marca">
+    <img [src]="imgUrl" class="img-fluid" alt="Imagen representativa de la marca">
   </div>
 </div>
 
@@ -29,11 +25,11 @@
 
       <div class="col-12 col-md-6 col-lg-4">
         <div class="mission-card position-relative overflow-hidden rounded shadow">
-          <img src="https://www.dropbox.com/scl/fi/cn7046zqtyyowuwx7u4qs/mision.png?rlkey=p6p8keg4ve0cz8fm7agvulfi7&st=a2m7376e&raw=1" class="img-fluid w-100 h-100 object-fit-cover" alt="Misión">
+          <img [src]="misionImg" class="img-fluid w-100 h-100 object-fit-cover" alt="Misión">
           <div class="mission-overlay d-flex align-items-center justify-content-center text-white p-3">
             <div class="text-content text-center">
               <h3 class="Mochalatte">Nuestra Misión</h3>
-              <span>Impulsar a las marcas a crear conexiones genuinas con sus audiencias a través de estrategias de neuromarketing, creatividad con propósito y experiencias educativas que inspiren confianza, generen transformación y conviertan cada interacción en oportunidades reales de crecimiento. Imagen que va es esta.</span>
+              <span [innerHTML]="mision"></span>
             </div>
           </div>
         </div>
@@ -41,11 +37,11 @@
 
       <div class="col-12 col-md-6 col-lg-4">
         <div class="mission-card position-relative overflow-hidden rounded shadow">
-          <img src="https://www.dropbox.com/scl/fi/djmyq853uvaed4djxoedr/vision.png?rlkey=jdnse500ev3k4s5d6x05kvw6l&st=d7gh54pi&raw=1" class="img-fluid w-100 h-100 object-fit-cover" alt="Visión">
+          <img [src]="visionImg" class="img-fluid w-100 h-100 object-fit-cover" alt="Visión">
           <div class="mission-overlay d-flex align-items-center justify-content-center text-white p-3">
             <div class="text-content text-center">
               <h3 class="Mochalatte">Nuestra Visión</h3>
-              <span>Ser una consultora de mercadeo destacada y diferente en Costa Rica donde la autenticidad, la conexión humana, el aprendizaje y la transformación guían todo lo que hacemos. Queremos que las marcas conecten de corazón a corazón mientras impulsamos su crecimiento real de negocio.</span>
+              <span [innerHTML]="vision"></span>
             </div>
           </div>
         </div>
@@ -64,7 +60,7 @@
         <div class="row mt-4 text-center">
           <div class="col-12">
             <h2 class="Mochalatte">Nuestros valores</h2>
-            <span>En SoulSync, nuestros valores son el ❤️ corazón de todo lo que hacemos. Guían cada decisión, cada experiencia y cada estrategia que creamos. Son la esencia que nos impulsa a 🤝 conectar con las personas, ✨ inspirar, 🎨 crear y 🌱 transformar.</span>
+            <span [innerHTML]="nValoresTitulo"></span>
           </div>
         </div>
       </div>
@@ -82,26 +78,12 @@
 
       <div class="col-12 col-md-3">
         <ul class="values-list list-unstyled">
-          <li class="value-item">
-            <span class="value-name">Conexión Humana <mat-icon class="ic-phones">keyboard_arrow_down</mat-icon></span>
-            <span class="value-description">Personas primero, siempre.</span>
-          </li>
-          <li class="value-item ms-md-5">
-            <span class="value-name">Autenticidad <mat-icon class="ic-phones">keyboard_arrow_down</mat-icon></span>
-            <span class="value-description">Estrategias reales que conectan.</span>
-          </li>
-          <li class="value-item ms-md-5">
-            <span class="value-name">Aprendizaje <mat-icon class="ic-phones">keyboard_arrow_down</mat-icon></span>
-            <span class="value-description">Talleres que inspiran y empoderan.</span>
-          </li>
-          <li class="value-item ms-md-5">
-            <span class="value-name">Creatividad <mat-icon class="ic-phones">keyboard_arrow_down</mat-icon></span>
-            <span class="value-description">Ideas con propósito.</span>
-          </li>
-          <li class="value-item">
-            <span class="value-name">Transformación <mat-icon class="ic-phones">keyboard_arrow_down</mat-icon></span>
-            <span class="value-description">Experiencias que generan cambio.</span>
-          </li>
+          @for (item of valores; track $index) {
+            <li class="value-item ms-md-5">
+              <span class="value-name">{{item.titulo}} <mat-icon class="ic-phones">keyboard_arrow_down</mat-icon></span>
+              <span class="value-description">{{item.description}}</span>
+            </li>
+          }
         </ul>
       </div>
     </div>
