--- a/src/app/components/footer/footer.html
+++ b/src/app/components/footer/footer.html
@@ -10,7 +10,7 @@
           <a href="#" class="text-light me-3 fs-3"><i class="bi bi-envelope"></i></a>
           <a href="#" class="text-light me-3 fs-3"><i class="bi bi-facebook"></i></a>
           <a href="#" class="text-light me-3 fs-3"><i class="bi bi-instagram"></i></a>
-          <a href="#" class="text-light me-3 fs-3"><i class="bi bi-tiktok"></i></a>
+          <a href="#" class="text-light me-3 fs-3"><i class="bi bi-linkedin"></i></a>
         </div>
       </div>
 
