--- a/src/app/pages/rutas-conexiones/rutas-conexiones.html
+++ b/src/app/pages/rutas-conexiones/rutas-conexiones.html
@@ -4,6 +4,11 @@
     <div class="col-12 col-lg-8">
       <h2 class="section-title mb-2 Mochalatte" [innerHTML]="Titulo"></h2>
       <p class="section-subtitle" [innerHTML]="SubTitulo"></p>
+        <div class="row justify-content-center mt-4">
+        <div class="col-auto">
+          <a href="https://wa.me/"  rel="noopener noreferrer" target="_blank" class="btn btn-outline-secondary btn-lg" >Agendar Gratis!!</a>
+        </div>
+      </div>
     </div>
   </div>
 
