--- a/src/app/components/footer/footer.html
+++ b/src/app/components/footer/footer.html
@@ -7,10 +7,10 @@
         <h3 class="me-md-3 mb-2 mb-md-0 text-center text-md-start">{{ title }}</h3>
 
         <div class="d-flex justify-content-center justify-content-md-start mt-2">
-          <a href="#" class="text-light me-3 fs-3"><i class="bi bi-envelope"></i></a>
-          <a href="#" class="text-light me-3 fs-3"><i class="bi bi-facebook"></i></a>
-          <a href="#" class="text-light me-3 fs-3"><i class="bi bi-instagram"></i></a>
-          <a href="#" class="text-light me-3 fs-3"><i class="bi bi-linkedin"></i></a>
+          <a href="mailto:{{footer.email}}"  class="text-light me-3 fs-3"><i class="bi bi-envelope"></i></a>
+          <a href="{{footer.facebook}}" target="_blank" class="text-light me-3 fs-3"><i class="bi bi-facebook"></i></a>
+          <a href="{{footer.instagram}}" target="_blank" class="text-light me-3 fs-3"><i class="bi bi-instagram"></i></a>
+          <a href="{{footer.tiktok}}" target="_blank" class="text-light me-3 fs-3"><i class="bi bi-linkedin"></i></a>
         </div>
       </div>
 
@@ -18,12 +18,12 @@
       <div class="col-12 col-md-8">
         <div class="d-flex flex-column flex-md-row align-items-center justify-content-md-end gap-3 text-center">
 
-          <a class="nav-link text-light" href="/about">Sobre nosotros</a>
+          <a class="nav-link text-light" href="/about">Nuestra Esencia</a>
 
           <!-- Servicios -->
           <div class="dropdown">
             <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown">
-              Servicios
+              Rutas de conexión
             </a>
             <ul class="dropdown-menu">
               <li *ngFor="let service of servicios">
@@ -32,24 +32,10 @@
             </ul>
           </div>
 
-          <!-- Proyectos -->
-          <div class="dropdown">
-            <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown">
-              Proyectos
-            </a>
-            <ul class="dropdown-menu">
-              <li *ngFor="let proyecto of proyectos">
-                <a class="dropdown-item" (click)="goToP(proyecto)">{{ proyecto.title }}</a>
-              </li>
-            </ul>
-          </div>
-
-          <a class="nav-link text-light" href="https://wa.me/{{ whatsApp }}" target="_blank" rel="noopener">
-            Contáctanos
-          </a>
+         <a class="nav-link" href="/Conectemos"  rel="noopener noreferrer">Conectemos</a>
 
           <a class="nav-link text-light" [href]="gCalendar" target="_blank">
-            Agendar
+            Agendar Gratis!!
           </a>
 
         </div>
