--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -31,12 +31,12 @@
 
       <ul class="navbar-nav ms-auto text-center">
         <li class="nav-item">
-          <a class="nav-link" href="/about">Sobre nosotros</a>
+          <a class="nav-link" href="/about">Nuestra Esencia</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
             aria-expanded="false">
-            Servicios
+            Rutas de conexión
           </a>
           <ul class="dropdown-menu">
             <li *ngFor="let service of servicios">
@@ -44,22 +44,11 @@
             </li>
           </ul>
         </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-            aria-expanded="false">
-            Proyectos
-          </a>
-          <ul class="dropdown-menu">
-            <li *ngFor="let proyecto of proyectos">
-              <a class="dropdown-item"(click)="goToP(proyecto)">{{proyecto.title}}</a>
-            </li>
-          </ul>
+        <li class="nav-item">
+          <a class="nav-link" href="/Conectemos"  rel="noopener noreferrer">Conectemos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://wa.me/{{whatsApp}}"  rel="noopener noreferrer" target="_blank">Contáctanos</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" [href]='gCalendar' target="_blank">Agendar</a>
+          <a class="nav-link" [href]='gCalendar' target="_blank">Agendar Gratis!!</a>
         </li>
       </ul>
     </div>
