--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -1,5 +1,5 @@
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark">
   <div class="container-fluid mx-2">
     <!-- Logo -->
     <div class="value-circle position-relative d-flex align-items-center justify-content-center me-2">
